<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="black_them">Тёмная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_sup">Написать в поддержку</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
    <string name="shear_app">https://practicum.yandex.ru/android-developer/</string>
    <string name="student_mail">acalmykoff@yandex.ru</string>
    <string name="title_of_sup_mail">Сообщение разработчикам и разработчицам приложения
        Playlist Maker</string>
    <string name="text_of_sup_mail">Спасибо разработчикам и разработчицам за крутое
        приложение!</string>
    <string name="term_of_use_web">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search_fail">Ничего не нашлось</string>
    <string name="internet_lost_connection">Проблема со связью \n\n Загрузка не удалась.
        Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="search_history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="example">Пример</string>
    <string name="length">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="play_time">00:00</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="empty_media">Ваша медиатека пуста</string>
    <string name="non_playlists">Вы не создали \n ни одного плейлиста</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="name">Название*</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="complete_playlist_creation">Завершить создание плейлиста?</string>
    <string name="cancel">Отменить</string>
    <string name="complete">Завершить</string>
    <string name="completion_dialog">Все несохраненные данные будут потеряны</string>
    <string name="zero_playing_time">0 минут</string>
    <string name="one_minute"> минута</string>
    <string name="minute"> минуты</string>
    <string name="minutes"> минут</string>
    <string name="zero_track_in_playlist">0 треков</string>
    <string name="one_track"> трек</string>
    <string name="track"> трека</string>
    <string name="tracks"> треков</string>
    <string name="empty_playlist">В этом плейлисте нет треков</string>
    <string name="delete_track">Хотите удалить трек?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="edit_playlist_information">Редактировать информацию</string>
    <string name="share">Поделиться</string>
    <string name="edit_playlist">Редактировать плейлист</string>
    <string name="save">Сохранить</string>
    <string name="share_toast_empty_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="test">Очень длинная строкааааааааааааааааааааааааааааааааааааааааааааааaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</string>
</resources>