<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    android:padding="@dimen/padding_of_all_items">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/panel_header"
        android:orientation="horizontal">

        <TextView
            style="@style/Text_1"
            android:layout_margin="10dp"
            android:text="@string/app_name" />
    </LinearLayout>

    <Button
        android:id="@+id/search_button"
        style="@style/Button_Main_act"
        android:layout_marginTop="@dimen/big_step"
        android:text="@string/search"
        app:icon="@drawable/search" />

    <Button
        android:id="@+id/media_button"
        style="@style/Button_Main_act"
        android:text="@string/media"
        app:icon="@drawable/library" />

    <Button
        android:id="@+id/settings_button"
        style="@style/Button_Main_act"
        android:layout_marginBottom="28dp"
        android:text="@string/settings"
        app:icon="@drawable/vector" />

</LinearLayout>
