<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    android:orientation="vertical"
    android:padding="@dimen/padding_small">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/panel_header"
        android:layout_gravity="start"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back_button"
            style="@style/ButtonBasic"
            android:outlineSpotShadowColor="?attr/colorOnPrimary"
            app:icon="@drawable/arrow_back"
            app:iconTint="?attr/colorOnSecondary" />

        <TextView
            style="@style/Text_1"
            android:text="@string/settings"
            android:textColor="?attr/colorOnSecondary" />

    </LinearLayout>


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/padding_large"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/black_them"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="@dimen/text_size_16" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/high_of_basic_stripe"
        android:orientation="horizontal">

        <TextView
            style="@style/TextSettings"
            android:text="@string/share_app" />

        <ImageView
            android:id="@+id/shear_button"
            style="@style/ImagesSettings"
            android:src="@drawable/share" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/high_of_basic_stripe"
        android:orientation="horizontal">

        <TextView
            style="@style/TextSettings"
            android:text="@string/write_to_sup" />

        <ImageView
            android:id="@+id/support_button"
            style="@style/ImagesSettings"
            android:src="@drawable/support" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/high_of_basic_stripe"
        android:orientation="horizontal">

        <TextView
            style="@style/TextSettings"
            android:text="@string/terms_of_use" />

        <ImageView
            android:id="@+id/terms_of_use_button"
            style="@style/ImagesSettings"
            android:src="@drawable/arrow_forward" />

    </LinearLayout>

</LinearLayout>