<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_4">

    <Button
        android:id="@+id/backButtonNewPlaylist"
        style="@style/ButtonBack"
        android:outlineSpotShadowColor="?attr/colorOnPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewScreenNewPlist"
        style="@style/Text_1"
        android:layout_marginTop="@dimen/padding_14"
        android:text="@string/new_playlist"
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintStart_toEndOf="@id/backButtonNewPlaylist"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40" />

    <ImageView
        android:id="@+id/playListImg"
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/zero"
        android:layout_marginStart="@dimen/padding_24"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="@dimen/padding_24"
        android:background="@drawable/playlist_add"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="@+id/horizontal_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clickable="true"
        android:src="@drawable/add_photo"
        android:focusable="true" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextName"
        style="@style/EditTextPlaylist"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginStart="@dimen/padding_16"
        android:layout_marginTop="@dimen/padding_32"
        android:layout_marginEnd="@dimen/padding_16"
        android:hint="@string/name"
        android:imeOptions="actionDone"
        android:paddingStart="@dimen/padding_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontal_line" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextDescription"
        style="@style/EditTextPlaylist"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginStart="@dimen/padding_16"
        android:layout_marginTop="@dimen/padding_16"
        android:layout_marginEnd="@dimen/padding_16"
        android:hint="@string/description"
        android:paddingStart="@dimen/padding_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextName" />

    <Button
        android:id="@+id/buttonCreate"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_44"
        android:layout_marginStart="@dimen/padding_16"
        android:layout_marginEnd="@dimen/padding_16"
        android:layout_marginBottom="@dimen/padding_32"
        android:backgroundTint="@color/grey1"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>